Add Facebook domain verification meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta content="https://lognos.io/images/circle_favicon.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
+  <meta name="facebook-domain-verification" content="3m06458t4yxxs5eainv2f9c4j31cj7" />
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
