--- a/about.html
+++ b/about.html
@@ -296,3 +296,12 @@ margin: 0rem !important;
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
 </html>
+<!-- Cal floating-popup embed code begins -->
+<script type="text/javascript">
+  (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
+Cal("init", "lognos-demo", {origin:"https://app.cal.com"});
+
+  Cal.ns["lognos-demo"]("floatingButton", {"calLink":"facundo.bassi/lognos-demo","config":{"layout":"month_view"},"buttonText":"Book demo"}); 
+  Cal.ns["lognos-demo"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
+  </script>
+  <!-- Cal floating-popup embed code ends -->
