Update heading in index.html to enhance clarity on AI Agents' role in project controls and risk management

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ margin: 0rem !important;
           <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="hero_wrapper-main-video">
             <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" class="hero_column-wrapper">
               <div class="hero_text" style="margin-left: 1rem; margin-right: 1rem;">
-                <h1 class="heading-3"><span class="text-color-highlighted">AI Agents for </span> project controls and risk management</h1>
+                <h1 class="heading-3"><span class="text-color-highlighted">AI Agents empowering </span> project controls and risk management teams</h1>
                 
               </div>
               <div class="button-group"">
