Add 'Schedule' link to navigation in multiple HTML files and create schedule-beta.html for new scheduling feature

--- a/pricing.html
+++ b/pricing.html
@@ -261,6 +261,7 @@ margin: 0rem !important;
               <a href="product.html" class="navbar_link w-nav-link">Product</a>
               <a href="pricing.html" aria-current="page" class="navbar_link w-nav-link w--current">Pricing</a>
               <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="navbar_link w-nav-link">Demo</a>
+              <a href="schedule-beta.html" class="navbar_link w-nav-link" style="display: inline-flex; align-items: center; gap: 0.5rem;">Schedule <span style="background: linear-gradient(135deg, #3B82F6, #1E40AF); color: white; font-size: 0.65rem; font-weight: 600; padding: 0.15rem 0.4rem; border-radius: 0.25rem; text-transform: uppercase; letter-spacing: 0.5px;">New</span></a>
             </div>
           </nav>
           <div class="navbar_menu-button w-nav-button">
