Vid in the product page with the entire risk quantification update workflow

--- a/product.html
+++ b/product.html
@@ -255,23 +255,25 @@ margin: 0rem !important;
     <main class="main-wrapper">
       <section class="section_subhero">
         <div class="w-layout-blockcontainer padding-global padding-section-large w-container">
-          <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="subhero_wrapper">
-            <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" style="-webkit-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="subhero_column">
-              <div class="subhero_text">
-                <h1 class="heading-style-h2"> <span class="text-span-6">An AI agent</span> <span class="text-color-highlighted"> in the background</span></h1>
-                <div class="subhero_text-paragraph">
-                  <p class="paragraph-7">Agentic workflows processes your information and data. Your team focuses on executing.</p>
+          <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="subhero_wrapper" style="display: flex; flex-direction: column; align-items: center; gap: 2rem;">
+            <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" style="-webkit-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0; width: 100%;">
+              <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center; width: 100%;">
+                <div>
+                  <h1 class="heading-style-h2"> <span class="text-span-6">Real automation</span> <span class="text-color-highlighted"> in the background</span></h1>
                 </div>
-                <div class="button-group">
-                  
-                  <a href="https://cal.com/facundo.bassi/lognos-demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
+                <div>
+                  <p class="paragraph-7">Agentic workflows processes your information and data. Your team focuses on executing.</p>
                 </div>
               </div>
             </div>
-            <div data-w-id="5107a480-0949-4a15-6ed4-4f5c07d0eb49" style="-webkit-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0; display: none;" class="subhero_column">
-              <div class="w-layout-blockcontainer container w-container">
-                <div style="padding-top:75%" class="video w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.loom.com%2Fembed%2Fd457f908541440cea7ba449b5c6f654f&display_name=Loom&url=https%3A%2F%2Fwww.loom.com%2Fshare%2Fd457f908541440cea7ba449b5c6f654f&image=https%3A%2F%2Fcdn.loom.com%2Fsessions%2Fthumbnails%2Fd457f908541440cea7ba449b5c6f654f-with-play.gif&type=text%2Fhtml&schema=loom" width="940" height="705" scrolling="no" allowfullscreen="" title="lognos_intro_update"></iframe></div>
-              </div>
+            <div data-w-id="5107a480-0949-4a15-6ed4-4f5c07d0eb49" style="-webkit-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0; width: 100%;">
+              <video id="risk-video" autoplay loop muted playsinline style="width: 100%; border-radius: 0.75rem; box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);">
+                <source src="images/lognos_risk.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+            <div style="width: 100%; display: flex; justify-content: center;">
+              <a href="https://cal.com/facundo.bassi/lognos-demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
             </div>
           </div>
           <div class="subhero_wrapper-product">
