Remove inline font size styling from schedule assistants heading for consistency

--- a/schedule-beta.html
+++ b/schedule-beta.html
@@ -266,7 +266,7 @@ margin: 0rem !important;
           <div class="hero_wrapper-main-video">
             <div class="hero_column-wrapper">
               <div class="hero_text" style="margin-left: 1rem; margin-right: 1rem;">
-                <h1 class="heading-3" style="font-size: 2.5rem;"><span class="text-color-highlighted">Schedule assistants </span> empowering your project team</h1>
+                <h1 class="heading-3"><span class="text-color-highlighted">Schedule assistants </span> empowering your project team</h1>
               </div>
             </div>
             <div class="hero_image-wrapper-home-video">
