--- a/product.html
+++ b/product.html
@@ -103,6 +103,7 @@ font-size: inherit;
     display: -webkit-box;
     overflow: hidden;
     -webkit-line-clamp: 3;
+    line-clamp: 3;
     -webkit-box-orient: vertical;
 }
 /* Apply "..." after 2 lines of text */
@@ -110,6 +111,7 @@ font-size: inherit;
     display: -webkit-box;
     overflow: hidden;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 /* Apply "..." at 100% width */
@@ -121,11 +123,11 @@ font-size: inherit;
 }
 /* Removes native scrollbar */
 .no-scrollbar {
-    -ms-overflow-style: none;  // IE 10+
-    overflow: -moz-scrollbars-none;  // Firefox
+    -ms-overflow-style: none;  /* IE 10+ */
+    overflow: -moz-scrollbars-none;  /* Firefox */
 }
 .no-scrollbar::-webkit-scrollbar {
-    display: none; // Safari and Chrome
+    display: none; /* Safari and Chrome */
 }
 /* Adds inline flex display */
 .display-inlineflex {
@@ -136,18 +138,18 @@ font-size: inherit;
   display: none !important;
 }
 @media screen and (max-width: 991px), 
-  @media screen and (max-width: 767px), 
-  @media screen and (max-width: 479px){
+  screen and (max-width: 767px), 
+  screen and (max-width: 479px){
     .hide, .hide-tablet{
       display: none !important;
     }
   }
-  @media screen and (max-width: 767px)
+  @media screen and (max-width: 767px) {
     .hide-mobile-landscape{
       display: none !important;
     }
   }
-  @media screen and (max-width: 479px)
+  @media screen and (max-width: 479px) {
     .hide-mobile{
       display: none !important;
     }
