--- a/whitepaper.html
+++ b/whitepaper.html
@@ -494,8 +494,8 @@
             }
         }
 
-        /* Mobile optimizations */
-        @media (max-width: 768px) {
+        /* Mobile optimizations - must override desktop clamp() */
+        @media screen and (max-width: 768px) {
             .cover-canvas {
                 padding-top: 80px !important;
             }
@@ -503,26 +503,29 @@
             .cover-canvas .cover-title {
                 font-size: 32px !important;
                 line-height: 1.3 !important;
-                margin: 0 0 16px;
+                margin: 0 0 16px !important;
             }
 
             .cover-canvas .cover-subtitle {
                 font-size: 22px !important;
-                margin: 0 0 20px;
+                line-height: 1.6 !important;
+                margin: 0 0 20px !important;
             }
 
             .cover-index {
-                flex-direction: column;
-                gap: 24px;
-                margin-top: 24px;
+                flex-direction: column !important;
+                gap: 24px !important;
+                margin-top: 24px !important;
             }
 
             .index-header {
                 font-size: 16px !important;
+                margin-bottom: 10px !important;
             }
 
             .cover-index li {
                 font-size: 14px !important;
+                line-height: 1.5 !important;
             }
 
             .document-canvas h2 {
