Update footer text in white paper to reflect branding

--- a/whitepaper.html
+++ b/whitepaper.html
@@ -1061,7 +1061,7 @@
                             intelligent systems to handle the routine while professionals focus on what matters."</p>
                     </div>
 
-                    <p style="text-align: center; margin-top: 40px; color: var(--muted);">— End —</p>
+                    <p style="text-align: center; margin-top: 40px; color: var(--muted);">— lognos 2026 —</p>
                 </div>
             </section>
 
