--- a/whitepaper.html
+++ b/whitepaper.html
@@ -497,35 +497,44 @@
         /* Mobile optimizations - must override desktop clamp() */
         @media screen and (max-width: 768px) {
             .cover-canvas {
-                padding-top: 80px !important;
+                padding-top: 60px !important;
             }
 
             .cover-canvas .cover-title {
-                font-size: 32px !important;
+                font-size: 28px !important;
                 line-height: 1.3 !important;
-                margin: 0 0 16px !important;
+                margin: 0 0 14px !important;
+                max-width: 100% !important;
             }
 
             .cover-canvas .cover-subtitle {
-                font-size: 22px !important;
-                line-height: 1.6 !important;
+                font-size: 18px !important;
+                line-height: 1.5 !important;
                 margin: 0 0 20px !important;
+                max-width: 100% !important;
             }
 
             .cover-index {
-                flex-direction: column !important;
-                gap: 24px !important;
+                display: grid !important;
+                grid-template-columns: 1fr 1fr !important;
+                gap: 20px !important;
                 margin-top: 24px !important;
+                width: 100%;
+            }
+
+            .index-column {
+                text-align: left !important;
             }
 
             .index-header {
-                font-size: 16px !important;
-                margin-bottom: 10px !important;
+                font-size: 14px !important;
+                margin-bottom: 8px !important;
             }
 
             .cover-index li {
-                font-size: 14px !important;
+                font-size: 13px !important;
                 line-height: 1.5 !important;
+                margin-bottom: 6px !important;
             }
 
             .document-canvas h2 {
@@ -1061,7 +1070,6 @@
                             intelligent systems to handle the routine while professionals focus on what matters."</p>
                     </div>
 
-                    <p style="text-align: center; margin-top: 40px; color: var(--muted);">— lognos 2026 —</p>
                 </div>
             </section>
 
