--- a/aace.html
+++ b/aace.html
@@ -602,6 +602,29 @@
 
     /* Mobile optimizations */
     @media screen and (max-width: 768px) {
+      /* Hide header on all slides except cover */
+      header {
+        display: none !important;
+      }
+
+      .slide:first-child header,
+      .slide[data-title="Cover"] header {
+        display: flex !important;
+      }
+
+      /* Fix slide content positioning for mobile */
+      .slide {
+        align-items: flex-start !important;
+        padding-top: 20px !important;
+        padding-bottom: 80px !important;
+      }
+
+      .canvas {
+        align-content: flex-start !important;
+        height: auto !important;
+        min-height: 100%;
+      }
+
       .cover-canvas {
         padding-top: 60px !important;
       }
@@ -1324,6 +1347,12 @@
         nextBtn.disabled = idx === slides.length - 1;
         const t = slides[idx].getAttribute('data-title') || `Slide ${idx + 1}`;
         document.title = `AACE Talk · ${t}`;
+        
+        // Show header only on cover slide in mobile
+        const header = document.querySelector('header');
+        if (header && window.innerWidth <= 768) {
+            header.style.display = idx === 0 ? 'flex' : 'none';
+        }
       }
 
       function next() { if (idx < slides.length - 1) { idx++; render(); } }
