--- a/aace.html
+++ b/aace.html
@@ -753,14 +753,16 @@
 <body>
   <div class="deck">
     <header>
-      <div class="brand">
-        <svg class="brand-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="12" cy="12" r="10" stroke="#3b82f6" fill="none" stroke-width="2.5" />
-        </svg>
-        <h1>lognos</h1>
-        <span class="separator">·</span>
-        <span class="sub">AACE Toronto Section</span>
-      </div>
+      <a href="https://lognos.io" target="_blank" class="brand-link">
+        <div class="brand">
+          <svg class="brand-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="12" cy="12" r="10" stroke="#3b82f6" fill="none" stroke-width="2.5" />
+          </svg>
+          <h1>lognos</h1>
+          <span class="separator">·</span>
+          <span class="sub">AACE Toronto Section</span>
+        </div>
+      </a>
     </header>
 
     <main class="stage" id="stage">
